--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10948,6 +10948,53 @@ span.genrebox {
   width: 30%;
 }
 
+img.cart {
+  width: 30px;
+}
+
+img.incart {
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+  height: 140px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.mycart_box {
+  color: #4c4c4c;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 24px;
+  padding: 24px 8px;
+  font-size: 1.1em;
+  background-color: #fefefe;
+  width: 100%;
+}
+
+.footer_design {
+  background-color: #07728a;
+  text-align: center;
+  color: #fefefe;
+  padding: 60px;
+}
+
+.buy-btn {
+  margin: 40px auto 60px;
+  width: 200px;
+  display: block;
+  background-color: #ff5c73;
+}
+
+.ball {
+  position: absolute;
+}
+
+.pagenate {
+  width: 200px;
+  margin: 20px auto;
+}
+
 /*!
  * Font Awesome Free 5.15.2 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
