--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -2,48 +2,84 @@ span.genrebox {
     width: 30%;
 }
 
-  img.cart{
-   width: 30px;
- }
- 
- img.incart{
-   width: 50%;
-   display: block;
-   margin: 0 auto;
-   height: 140px;
-   object-fit: cover;
- }
- 
- .mycart_box{
- 
-   color: #4c4c4c ;
-   font-weight: bold;
-   text-align: center;
-   margin-top: 24px;
-   padding: 24px 8px;
-   font-size: 1.1em;
-   background-color: #fefefe ;
-   width: 100%;
- }
- 
- .footer_design{
-   background-color: #07728a ;;
-   text-align: center;
-   color: #fefefe ;
-   padding: 60px;
- }
- 
- .buy-btn{
-   margin: 40px auto 60px;
-   width: 200px;
-   display: block;
-   background-color: #ff5c73 ;
- }
- 
- .ball{
-   position: absolute;
- }
+/*検索ボックスのジャンル選択プルダウン*/
 
- .pagenate{
-   width: 200px;margin: 20px auto;
- }
+.stock_thumbnail {
+    position: relative;
+}
+
+.genre_icon {
+    color: #adb5bd99;
+    ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    cursor: pointer;
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    margin: 8px;
+}
+
+/*サムネイルの左下に出るジャンル判別アイコン*/
+
+a img.cart {
+    width: 30px;
+}
+
+img.incart {
+    width: 100%;
+    display: block;
+    margin: 0 auto;
+    height: 140px;
+    object-fit: cover;
+}
+
+/*商品一覧の画像*/
+
+.mycart_box {
+    color: #4c4c4c;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 24px;
+    padding: 0px;
+    /*商品一覧の余白をなくす*/
+    font-size: 1.1em;
+    background-color: #fefefe;
+    width: 100%;
+}
+
+.mycart_box_incart {
+    padding: 8px 0;
+}/*カートのページでは画像の上下に余白*/
+
+.img_box {
+    padding: 0;
+}
+
+/*商品一覧の余白をなくす*/
+
+.footer_design {
+    background-color: #07728a;
+    ;
+    text-align: center;
+    color: #fefefe;
+    padding: 60px;
+}
+
+.buy-btn {
+    margin: 40px auto 60px;
+    width: 200px;
+    display: block;
+    background-color: #ff5c73;
+}
+
+.ball {
+    position: absolute;
+}
+
+.pagenate {
+    width: 200px;
+    margin: 20px auto;
+}
