--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10954,6 +10954,12 @@ span.genrebox {
   position: relative;
 }
 
+footer.footer_design.bg-dark {
+  color: #fff;
+}
+
+/*footer色*/
+
 .genre_icon {
   color: #adb5bd99;
   display: flex;
@@ -10968,6 +10974,78 @@ span.genrebox {
 }
 
 /*サムネイルの左下に出るジャンル判別アイコン*/
+
+.favorite_icon {
+  color: #adb5bd99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  cursor: pointer;
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  margin: 8px;
+}
+
+.download_icon {
+  color: #adb5bd99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+  margin: 0px;
+}
+
+.favorite_icon button {
+  background-color: #adb5bd99;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  color: #fff;
+  opacity: 0.5;
+}
+
+.download_icon button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  color: #fff;
+  opacity: 0.5;
+}
+
+.favorite_icon button:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -moz-opacity: 1;
+  transition: 0.3s ease-in-out;
+}
+
+.download_icon button:hover {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -moz-opacity: 1;
+  transition: 0.3s ease-in-out;
+}
 
 a img.cart {
   width: 30px;
@@ -10988,7 +11066,6 @@ img.incart {
   color: #4c4c4c;
   font-weight: bold;
   text-align: center;
-  margin-top: 24px;
   padding: 0px;
   /*商品一覧の余白をなくす*/
   font-size: 1.1em;
@@ -11009,9 +11086,7 @@ img.incart {
 /*商品一覧の余白をなくす*/
 
 .footer_design {
-  background-color: #07728a;
   text-align: center;
-  color: #fefefe;
   padding: 60px;
 }
 
