--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -8,9 +8,14 @@ span.genrebox {
     position: relative;
 }
 
+footer.footer_design.bg-dark {
+    color: #fff;
+}
+
+/*footer色*/
+
 .genre_icon {
     color: #adb5bd99;
-    ;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -23,6 +28,81 @@ span.genrebox {
 }
 
 /*サムネイルの左下に出るジャンル判別アイコン*/
+
+.favorite_icon {
+    color: #adb5bd99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    cursor: pointer;
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    margin: 8px;
+}
+
+.download_icon {
+    color: #adb5bd99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    cursor: pointer;
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    margin: 0px;
+}
+
+.favorite_icon button {
+    background-color: #adb5bd99;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+    appearance: none;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    color: #fff;
+    opacity: 0.5;
+}
+
+.download_icon button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    padding: 0;
+    appearance: none;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    color: #fff;
+    opacity: 0.5;
+}
+
+.favorite_icon button:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -moz-opacity: 1.0;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+}
+
+.download_icon button:hover {
+    opacity: 1;
+    filter: alpha(opacity=100);
+    -moz-opacity: 1.0;
+    -webkit-transition: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -o-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+}
+
 
 a img.cart {
     width: 30px;
@@ -42,7 +122,7 @@ img.incart {
     color: #4c4c4c;
     font-weight: bold;
     text-align: center;
-    margin-top: 24px;
+    //margin-top: 24px;
     padding: 0px;
     /*商品一覧の余白をなくす*/
     font-size: 1.1em;
@@ -52,7 +132,9 @@ img.incart {
 
 .mycart_box_incart {
     padding: 8px 0;
-}/*カートのページでは画像の上下に余白*/
+}
+
+/*カートのページでは画像の上下に余白*/
 
 .img_box {
     padding: 0;
@@ -61,10 +143,8 @@ img.incart {
 /*商品一覧の余白をなくす*/
 
 .footer_design {
-    background-color: #07728a;
-    ;
     text-align: center;
-    color: #fefefe;
+    //color: #fefefe;
     padding: 60px;
 }
 
