--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -1,7 +1,15 @@
 /*------
 parts
 -----*/
-
+.circle{
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    background: skyblue;
+    text-align: center;
+    line-height: 20px;
+  }
 
 /*----
 検索ボックス
@@ -65,7 +73,9 @@ archive
 }
 
 
-.favorite_icon {
+
+/*お気に入りボタンデザイン*/
+div.favorite_icon button {
     color: #adb5bd99;
     display: flex;
     justify-content: center;
@@ -76,9 +86,19 @@ archive
     top: 0%;
     right: 0%;
     margin: 8px;
+    background-color: #adb5bd99;
+    border: none;
+    outline: none;
+    padding: 0;
+    appearance: none;
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    color: #fff;
 }
 
-.download_icon {
+/*ダウンロードボタンデザイン*/
+.download_icon button {
     color: #adb5bd99;
     display: flex;
     justify-content: center;
@@ -87,40 +107,27 @@ archive
     cursor: pointer;
     position: absolute;
     bottom: 0%;
-    right: 0%;
+    right: 8px;
     margin: 0px;
-}
-
-.favorite_icon button {
-    background-color: #adb5bd99;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    padding: 0;
-    appearance: none;
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    color: #fff;
-    opacity: 0.5;
-}
-
-.download_icon button {
     background: none;
     border: none;
-    cursor: pointer;
     outline: none;
     padding: 0;
     appearance: none;
     height: 50px;
     width: 50px;
     border-radius: 50%;
-    color: #fff;
-    opacity: 0.5;
 }
 
-div.stock_thumbnail:hover div.favorite_icon button{
-    opacity: 1;
+/*マウスオンされるまで透明*/
+div.mouseon_icon button{
+    opacity: 0;
+}
+
+/*画像にマウスオンでアイコン出現*/
+/*スマホだと表示できないの考え中*/
+div.stock_thumbnail:hover div.mouseon_icon button{
+    opacity: 0.5  ;
     filter: alpha(opacity=0);
     -moz-opacity: 1.0;
     -webkit-transition: 0.1s ease-in-out;
@@ -129,9 +136,34 @@ div.stock_thumbnail:hover div.favorite_icon button{
     transition: 0.1s ease-in-out;
 }
 
-img.incart:hover　.download_icon {
-    opacity: 1;
-    filter: alpha(opacity=100);
+span.expert{
+    //opacity: 0;
+    color: #adb5bd99;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    cursor: pointer;
+    position: absolute;
+    top: 0%;
+    right: 10px;
+    margin: 8px;
+    background: none;
+    border: none;
+    outline: none;
+    padding: 0;
+    appearance: none;
+}
+
+div.favorite_icon:hover span.expert{
+    //opacity:10;
+}
+
+
+/*アイコンにマウスオンでアイコン明るく*/
+div.mouseon_icon button:hover {
+    opacity: 1.0  !important;
+    filter: alpha(opacity=0);
     -moz-opacity: 1.0;
     -webkit-transition: 0.1s ease-in-out;
     -moz-transition: 0.1s ease-in-out;
@@ -139,6 +171,14 @@ img.incart:hover　.download_icon {
     transition: 0.1s ease-in-out;
 }
 
+/*マウスオンで画像を暗く*/
+div.stock_thumbnail:hover img.incart{
+    filter: brightness(50%);
+    -webkit-transition: 0.1s ease-in-out;
+    -moz-transition: 0.1s ease-in-out;
+    -o-transition: 0.1s ease-in-out;
+    transition: 0.1s ease-in-out;
+}
 
 a img.cart {
     width: 30px;
