--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -72,7 +72,11 @@ archive
     margin: 8px;
 }
 
-
+div.favorite_icon{
+        position: absolute;
+        top: 0%;
+        right: 0%;
+}
 
 /*お気に入りボタンデザイン*/
 div.favorite_icon button {
@@ -82,9 +86,7 @@ div.favorite_icon button {
     align-items: center;
     font-size: 1.5rem;
     cursor: pointer;
-    position: absolute;
-    top: 0%;
-    right: 0%;
+
     margin: 8px;
     background-color: #adb5bd99;
     border: none;
@@ -145,9 +147,9 @@ span.expert{
     font-size: 1.5rem;
     cursor: pointer;
     position: absolute;
-    top: 0%;
-    right: 10px;
-    margin: 8px;
+    //top: 0%;
+    //right: 10px;
+    //margin: 8px;
     background: none;
     border: none;
     outline: none;
@@ -155,9 +157,18 @@ span.expert{
     appearance: none;
 }
 
-div.favorite_icon:hover span.expert{
-    //opacity:10;
-}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /*アイコンにマウスオンでアイコン明るく*/
