--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10969,6 +10969,10 @@ parts
 
 .icon_expert {
   opacity: 0;
+  background-color: #adb5bd99;
+  color: white;
+  padding: 5px;
+  border-radius: 10px;
 }
 
 /*----
@@ -11070,16 +11074,18 @@ div.favorite_icon button {
 
 /*ダウンロードボタンデザイン*/
 
-.download_icon button {
+div.download_icon {
+  bottom: 0%;
+  right: 8px;
+  position: absolute;
+}
+
+div.download_icon button {
   color: #adb5bd99;
-  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.5rem;
   cursor: pointer;
-  position: absolute;
-  bottom: 0%;
-  right: 8px;
   margin: 0px;
   background: none;
   border: none;
@@ -11095,15 +11101,22 @@ div.favorite_icon button {
 
 /*マウスオンされるまで透明*/
 
+div.download_icon button {
+  opacity: 0;
+}
+
 /*画像にマウスオンでアイコン出現*/
 
 /*スマホだと表示できないの考え中*/
 
 div.stock_thumbnail:hover div.mouseon_icon button {
   opacity: 0.5;
-  filter: alpha(opacity=0);
-  -moz-opacity: 1;
-  transition: 0.1s ease-in-out;
+  /*     filter: alpha(opacity=0);
+      -moz-opacity: 1.0;
+      -webkit-transition: 0.1s ease-in-out;
+      -moz-transition: 0.1s ease-in-out;
+      -o-transition: 0.1s ease-in-out;
+      transition: 0.1s ease-in-out; */
 }
 
 /*アイコンにマウスオンでアイコン明るく*/
