--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -92,6 +92,16 @@ archive
     margin: 8px;
 }
 
+.purchased_txt {
+    color: #fff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
 div.favorite_icon {
     position: absolute;
     top: 0%;
@@ -148,6 +158,8 @@ div.download_icon button  {
     opacity: 0;
 }
 
+
+
 /*画像にマウスオンでアイコン出現*/
 /*スマホだと表示できないの考え中*/
 div.stock_thumbnail:hover div.mouseon_icon button {
@@ -172,19 +184,18 @@ div.mouseon_icon button:hover {
     transition: 0.1s ease-in-out;
 }
 
-#target.hover {
-    color: red;
-}
-
-
-/* .trigger:hover +.expert {
-    color: red ;
-
-}
- */
 
 /*マウスオンで画像を暗く*/
-div.stock_thumbnail:hover img.incart {
+div.stock_thumbnail:hover img.not_purchased {
+    filter: brightness(50%);
+    -webkit-transition: 0.1s ease-in-out;
+    -moz-transition: 0.1s ease-in-out;
+    -o-transition: 0.1s ease-in-out;
+    transition: 0.1s ease-in-out;
+}
+
+/*購入済み商品は元から暗く*/
+img.purchased {
     filter: brightness(50%);
     -webkit-transition: 0.1s ease-in-out;
     -moz-transition: 0.1s ease-in-out;
