--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -258,6 +258,22 @@ single
     width: 100%
 }
 
+div#single_form button {
+    margin: 5px;
+}/*ボタンの間隔*/
+
+div#author{
+    padding:5px;
+}/*投稿者ブロック余白*/
+
+div#author img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    padding :5px;
+}/*投稿者アイコン*/
+
+
 
 /*-----
 cart
@@ -291,4 +307,36 @@ div#preview img {
     border-style: solid;
     border-width: 4px;
     border-color: #545b6252;
+}
+
+table {
+    table-layout: fixed;
+    width: 100%;
+}
+
+th.table_subject {
+    width: 30%;
+}
+
+td.table_content {
+    width: 70%;
+}
+
+#mypage_submit {
+    display: block;
+    margin: 0 0 0 auto;
+}/*submitボタン右寄せ*/
+
+.invalid_message{
+    width: 100%;
+    margin-top: 0.25rem;
+    font-size: 80%;
+    color: #e3342f;
+}/*バリテーションデザイン*/
+
+/*-----
+post
+-----*/
+div#stockPreview img {
+    max-width: 100%;
 }
