add delete function and downlad link at orderlist page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11308,6 +11308,14 @@ div#stockPreview img {
   max-width: 100%;
 }
 
+/*-----
+購入履歴
+-----*/
+
+.loopbuttton {
+  margin: 2px 0 25px;
+}
+
 /*!
  * Font Awesome Free 5.15.2 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
