--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11316,6 +11316,27 @@ div#stockPreview img {
   margin: 2px auto 25px;
 }
 
+/*-----
+自分の投稿一覧
+-----*/
+
+img.myPost {
+  max-width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+/* .buttonArea{
+    position:relative;
+}
+
+.jumpButton {
+      position: absolute;
+      right: 0;
+      bottom: 0;
+} */
+
 /*!
  * Font Awesome Free 5.15.2 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
