--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11322,20 +11322,23 @@ div#stockPreview img {
 
 img.myPost {
   max-width: 100%;
-  height: 100%;
+  height: 250px;
   -o-object-fit: cover;
   object-fit: cover;
 }
 
-/* .buttonArea{
-    position:relative;
+.buttonArea {
+  position: relative;
+  padding-top: 5px;
 }
 
 .jumpButton {
-      position: absolute;
-      right: 0;
-      bottom: 0;
-} */
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  display: inline-flex;
+  padding: 0px 20px 0px 0px;
+}
 
 /*!
  * Font Awesome Free 5.15.2 by @fontawesome - https://fontawesome.com
