--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -360,17 +360,20 @@ div#stockPreview img {
 -----*/
 img.myPost {
     max-width: 100%;
-    height: 100%;
+    height: 250px;
     -o-object-fit: cover;
     object-fit: cover;
 }
 
-/* .buttonArea{
+.buttonArea{
     position:relative;
+    padding-top: 5px;
 }
 
 .jumpButton {
       position: absolute;
       right: 0;
       bottom: 0;
-} */
+      display:inline-flex;
+      padding: 0px 20px 0px 0px;
+}
