Add water marck function to movies

--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -329,7 +329,7 @@ td.table_content {
     width: 70%;
 }
 
-#mypage_submit {
+.mypage_submit {
     display: block;
     margin: 0 0 0 auto;
 }/*submitボタン右寄せ*/
