add function preview movie file at create page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11288,10 +11288,14 @@ td.table_content {
 /*バリテーションデザイン*/
 
 /*-----
-post
+新規作品投稿(stock/create)
 -----*/
 
 div#stockPreview img {
+  max-width: 100%;
+}
+
+#previewFile {
   max-width: 100%;
 }
 
