--- a/resources/sass/_style.scss
+++ b/resources/sass/_style.scss
@@ -284,7 +284,12 @@ div#author img {
     object-fit: cover;//縦横比固定
 }/*投稿者アイコン*/
 
-
+.inline-flex{
+    display: inline-flex;
+}
+.inline-flex form {
+    padding: 5px;
+}
 
 /*-----
 cart
